--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,27 @@
 {
   "name": "simple-search",
+  "homepage": "https://github.com/GenesisMRainer/simple-search",
   "authors": [
     "GenesisMRainer <michael.rainer@genesisworld.com>"
   ],
-  "description": "",
-  "main": "",
+  "version": "0.0.1",
+  "dependencies": {
+    "polymer": "1.7.0",
+    "paper-input": "1.1.20",
+    "iron-a11y-keys": "1.0.6",
+    "iron-icons": "1.1.3",
+    "paper-icon-button": "1.1.2",
+    "iron-flex-layout": "1.3.1"
+  },
+  "devDependencies": {
+    "web-component-tester": "4.3.5",
+    "iron-component-page": "1.1.7"
+  },
+  "description": "Simple Search Box",
+  "main": "Simple-Search.html",
+  "keywords": ["search-element", "simple-search"],
   "license": "MIT",
-  "homepage": "",
+  "private": false,
   "ignore": [
     "**/.*",
     "node_modules",
